[gd_scene load_steps=12 format=3 uid="uid://b0jln8tvbjy1n"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_t6syr"]
[ext_resource type="PackedScene" uid="uid://bh2mklahppagg" path="res://scenes/main/player.tscn" id="1_yns6y"]
[ext_resource type="PackedScene" uid="uid://6rs2sd0g3eh0" path="res://scenes/main/box.tscn" id="2_igf6o"]
[ext_resource type="PackedScene" uid="uid://8e15q3lh2a71" path="res://scenes/ducks/duck.tscn" id="3_dg6jb"]
[ext_resource type="Script" path="res://scripts/zone.gd" id="5_fnass"]
[ext_resource type="PackedScene" uid="uid://cq1305xcyvifm" path="res://scenes/main/mailbox.tscn" id="6_3xd66"]
[ext_resource type="PackedScene" uid="uid://b3xyx2e5ubw4f" path="res://scenes/main/food_tray.tscn" id="8_8htiy"]
[ext_resource type="PackedScene" uid="uid://d028ajclojpaf" path="res://scenes/main/brush_holder.tscn" id="8_mb5u4"]

[sub_resource type="PlaneMesh" id="PlaneMesh_u2kuf"]

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_4jm6v"]
data = PackedVector3Array(1, 0, 1, -1, 0, 1, 1, 0, -1, -1, 0, 1, -1, 0, -1, 1, 0, -1)

[sub_resource type="BoxShape3D" id="BoxShape3D_w2tic"]

[node name="Main" type="Node3D"]
script = ExtResource("1_t6syr")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.912998, 0.407964, 0, -0.407964, 0.912998, 0, 0.428689, 0)

[node name="Player" parent="." instance=ExtResource("1_yns6y")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 31.928, 1, 2.9959)

[node name="UI" type="Node" parent="."]

[node name="Control" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.0
offset_top = -326.5
offset_right = 576.0
offset_bottom = 326.5
grow_horizontal = 2
grow_vertical = 2

[node name="InteractPrompt" type="Label" parent="UI/Control"]
visible = false
layout_mode = 0
offset_left = 312.0
offset_top = 306.5
offset_right = 840.0
offset_bottom = 340.5
theme_override_font_sizes/font_size = 24
text = "[E] Interact"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NamingPanel" type="Panel" parent="UI/Control"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.0
offset_top = -325.5
offset_right = 576.0
offset_bottom = 325.5
grow_horizontal = 2
grow_vertical = 2

[node name="NamingLabel" type="Label" parent="UI/Control/NamingPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -98.5
offset_top = -100.0
offset_right = 98.5
offset_bottom = -66.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "Name your duck:"
horizontal_alignment = 1

[node name="NameInput" type="LineEdit" parent="UI/Control/NamingPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -184.0
offset_top = -44.0
offset_right = 192.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24

[node name="ConfirmButton" type="Button" parent="UI/Control/NamingPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -51.0
offset_top = 28.0
offset_right = 51.0
offset_bottom = 70.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "Confirm"

[node name="ObjectiveLabel" type="Label" parent="UI/Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -248.0
offset_top = 26.5
offset_right = -18.0
offset_bottom = 60.5
grow_horizontal = 0
theme_override_font_sizes/font_size = 24
text = "Ducks collected: 0/5"

[node name="NextDayPopup" type="Panel" parent="UI/Control"]
visible = false
layout_mode = 0
offset_right = 1152.0
offset_bottom = 651.0

[node name="Label" type="Label" parent="UI/Control/NextDayPopup"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -146.5
offset_top = -22.5
offset_right = 146.5
offset_bottom = 22.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "The next day..."
horizontal_alignment = 1

[node name="HintPopup" type="Panel" parent="UI/Control"]
visible = false
layout_mode = 0
offset_right = 1152.0
offset_bottom = 651.0

[node name="HintLabel" type="Label" parent="UI/Control/HintPopup"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -423.0
offset_top = -22.5
offset_right = 423.0
offset_bottom = 22.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1

[node name="Pen" parent="." instance=ExtResource("2_igf6o")]
transform = Transform3D(4, 0, 0, 0, 3, 0, 0, 0, 8.2, 11.3903, 0.996771, -12.0282)

[node name="House" parent="." instance=ExtResource("2_igf6o")]
transform = Transform3D(-1.74846e-07, 0, 8.2, 0, 3, 0, -4, 0, -3.58433e-07, 32.3903, 0.996771, -15.0282)

[node name="Ground" type="StaticBody3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ground"]
transform = Transform3D(100, 0, 0, 0, 100, 0, 0, 0, 100, 0, 0, 0)
mesh = SubResource("PlaneMesh_u2kuf")
skeleton = NodePath("")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground"]
transform = Transform3D(100, 0, 0, 0, 100, 0, 0, 0, 100, 0, 0, 0)
shape = SubResource("ConcavePolygonShape3D_4jm6v")

[node name="Ducks" type="Node" parent="."]

[node name="Duck" parent="Ducks" instance=ExtResource("3_dg6jb")]
transform = Transform3D(-1.5, 0, 1.31134e-07, 0, 1.5, 0, -1.31134e-07, 0, -1.5, 5.86581, 0, -13.7671)

[node name="DuckBrain" parent="Ducks/Duck" index="0"]
duck_name = "Super Duck"

[node name="Duck2" parent="Ducks" instance=ExtResource("3_dg6jb")]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, -3, 0, 17)

[node name="Duck7" parent="Ducks" instance=ExtResource("3_dg6jb")]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 3, 0, 16)

[node name="Duck8" parent="Ducks" instance=ExtResource("3_dg6jb")]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, -2, 0, 13)

[node name="Duck9" parent="Ducks" instance=ExtResource("3_dg6jb")]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, -7, 0, 10)

[node name="Duck3" parent="Ducks" instance=ExtResource("3_dg6jb")]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 2, 0, 11)

[node name="Duck4" parent="Ducks" instance=ExtResource("3_dg6jb")]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, -2, 0, 8)

[node name="Duck5" parent="Ducks" instance=ExtResource("3_dg6jb")]
transform = Transform3D(-1.5, 0, 1.31134e-07, 0, 1.5, 0, -1.31134e-07, 0, -1.5, 1.86581, 0, -13.7671)

[node name="DuckBrain" parent="Ducks/Duck5" index="0"]
duck_name = "Torben"

[node name="Duck6" parent="Ducks" instance=ExtResource("3_dg6jb")]
transform = Transform3D(-1.5, 0, 1.31134e-07, 0, 1.5, 0, -1.31134e-07, 0, -1.5, 2.11281, 0, -9.75912)

[node name="DuckBrain" parent="Ducks/Duck6" index="0"]
duck_name = "Lady Gaga"

[node name="LakeZone" type="Area3D" parent="." groups=["zones"]]
transform = Transform3D(30, 0, 0, 0, 30, 0, 0, 0, 30, 0, 0, 17)
script = ExtResource("5_fnass")
context = 1

[node name="CollisionShape3D" type="CollisionShape3D" parent="LakeZone"]
shape = SubResource("BoxShape3D_w2tic")

[node name="PenZone" type="Area3D" parent="." groups=["zones"]]
transform = Transform3D(30, 0, 0, 0, 30, 0, 0, 0, 30, 0, 0, -19)
collision_mask = 3
script = ExtResource("5_fnass")
context = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="PenZone"]
shape = SubResource("BoxShape3D_w2tic")

[node name="HouseZone" type="Area3D" parent="." groups=["zones"]]
transform = Transform3D(20, 0, 0, 0, 20, 0, 0, 0, 20, 34, 0, -15)
collision_mask = 3
script = ExtResource("5_fnass")
context = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="HouseZone"]
shape = SubResource("BoxShape3D_w2tic")

[node name="Mailbox" parent="." instance=ExtResource("6_3xd66")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 28, 0.3096, -6)

[node name="FoodTray" parent="." instance=ExtResource("8_8htiy")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 8.5, 0.398, -14.045)

[node name="BrushHolder" parent="." instance=ExtResource("8_mb5u4")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 8.5, 0.4, -10)

[connection signal="text_submitted" from="UI/Control/NamingPanel/NameInput" to="Player" method="_on_name_input_text_submitted"]
[connection signal="pressed" from="UI/Control/NamingPanel/ConfirmButton" to="Player" method="_on_confirm_button_pressed"]
[connection signal="body_entered" from="LakeZone" to="LakeZone" method="_on_body_entered"]
[connection signal="body_exited" from="LakeZone" to="LakeZone" method="_on_body_exited"]
[connection signal="body_entered" from="PenZone" to="PenZone" method="_on_body_entered"]
[connection signal="body_exited" from="PenZone" to="PenZone" method="_on_body_exited"]
[connection signal="body_entered" from="HouseZone" to="HouseZone" method="_on_body_entered"]
[connection signal="body_exited" from="HouseZone" to="HouseZone" method="_on_body_exited"]

[editable path="Ducks/Duck"]
[editable path="Ducks/Duck/DuckModelPlaceholder"]
[editable path="Ducks/Duck2"]
[editable path="Ducks/Duck2/DuckModelPlaceholder"]
[editable path="Ducks/Duck7"]
[editable path="Ducks/Duck7/DuckModelPlaceholder"]
[editable path="Ducks/Duck8"]
[editable path="Ducks/Duck8/DuckModelPlaceholder"]
[editable path="Ducks/Duck9"]
[editable path="Ducks/Duck9/DuckModelPlaceholder"]
[editable path="Ducks/Duck3"]
[editable path="Ducks/Duck3/DuckModelPlaceholder"]
[editable path="Ducks/Duck4"]
[editable path="Ducks/Duck4/DuckModelPlaceholder"]
[editable path="Ducks/Duck5"]
[editable path="Ducks/Duck5/DuckModelPlaceholder"]
[editable path="Ducks/Duck6"]
[editable path="Ducks/Duck6/DuckModelPlaceholder"]
